[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/caja.png" type="Texture" id=1]
[ext_resource path="res://scenes/Box.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.4272, 23.5423 )

[node name="Box" type="RigidBody2D"]
input_pickable = true
collision_layer = 2
collision_mask = 7
can_sleep = false
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="mouse_entered" from="." to="." method="_on_Box_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Box_mouse_exited"]
